--- a/plugins/LinkedIn/config.yaml
+++ b/plugins/LinkedIn/config.yaml
@@ -13,40 +13,17 @@ commenter_authenticators:
         logo: plugins/BrowserIDCommenters/browserid_logo.png
         logo_small: plugins/BrowserIDCommenters/browserid_logo.png
         login_form: |
-            <script src="https://browserid.org/include.js" type='text/javascript'></script>
-            <script type="text/javascript">
-                function bid_login_clicked() {
-                    navigator.id.getVerifiedEmail(function(assertion) {
-                        if (assertion) {
-                            // This code will be invoked once the user has successfully
-                            // selected an email address they control to sign in with.
-                            document.getElementById('browserid_assertion').value = assertion;
-                            var form = document.getElementById('browserid-signin-form');
-                            form.submit();
-                        } else {
-                            // something went wrong!  the user isn't logged in.
-                            document.getElementById('browser-id-msg').innerHTML="Login Failed";
-                        }
-                    });
-                }
-            </script>
-            <form id="browserid-signin-form" method="post" action="<mt:var name="script_url">">
-                <input type="hidden" name="__mode"   value="handle_sign_in">
+            <form id="linkedin-signin-form" method="post" action="<mt:var name="script_url">">
+                <input type="hidden" name="__mode"   value="login_external">
                 <input type="hidden" name="blog_id"  value="<mt:var name="blog_id">">
                 <input type="hidden" name="entry_id" value="<mt:var name="entry_id">">
-                <mt:if name="return_url">
-                    <input type="hidden" name="return_url" value="<mt:var name="return_url" escape="html">">
-                <mt:else>
-                    <input type="hidden" name="static"   value="<mt:var name="static">">
-                </mt:if>
-                <input type="hidden" name="key"      value="BrowserID">
-                <input type="hidden" name="browserid_assertion" id="browserid_assertion">
+                <input type="hidden" name="static"   value="<mt:var name="static" escape="html">">
+                <input type="hidden" name="key"      value="LinkedIn">
             </form>
             <div>
-                <p id="browser-id-msg"></p>
-                <a href="#" class="bid_login" onclick="bid_login_clicked()">
-                    <img src='<mt:var name="static_uri">plugins/BrowserIDCommenters/sign_in_green.png' alt='Sign in'>
+                <a href="#" onclick="document.getElementById('linkedin-signin-form').submit()">
+                    <img src='<mt:var name="static_uri">plugins/FacebookCommenters/login-button.png' alt='Sign in'>
                 </img></a>
             </div>
-        login_form_params: BrowserIDCommenters::Auth::commenter_auth_params
+        login_form_params: LinkedIn::Auth::commenter_auth_params
         condition: LinkedIn::Auth::condition
