--- a/plugins/LinkedIn/config.yaml
+++ b/plugins/LinkedIn/config.yaml
@@ -13,16 +13,16 @@ commenter_authenticators:
         logo: plugins/LinkedIn/linkedin-signin.png
         logo_small: plugins/LinkedIn/linkedin-logo.png
         login_form: |
-            <form id="linkedin-signin-form" method="post" action="<mt:var name="script_url">">
-                <input type="hidden" name="__mode"   value="login_external">
-                <input type="hidden" name="blog_id"  value="<mt:var name="blog_id">">
-                <input type="hidden" name="entry_id" value="<mt:var name="entry_id">">
-                <input type="hidden" name="static"   value="<mt:var name="static" escape="html">">
-                <input type="hidden" name="key"      value="LinkedIn">
+            <form id="linkedin-signin-form" method="post" action="<mt:var name="script_url">" />
+                <input type="hidden" name="__mode"   value="login_external" />
+                <input type="hidden" name="blog_id"  value="<mt:var name="blog_id">" />
+                <input type="hidden" name="entry_id" value="<mt:var name="entry_id">" />
+                <input type="hidden" name="static"   value="<mt:var name="static" escape="html">" />
+                <input type="hidden" name="key"      value="LinkedIn" />
             </form>
             <div>
                 <a href="#" onclick="document.getElementById('linkedin-signin-form').submit()">
-                    <img src='<mt:var name="static_uri">plugins/LinkedIn/linkedin-signin.png' alt='Sign in'>
+                    <img src='<mt:var name="static_uri">plugins/LinkedIn/linkedin-signin.png' alt='Sign in' />
                 </img></a>
             </div>
         login_form_params: LinkedIn::Auth::commenter_auth_params
